--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 azure-identity==1.13.0b4
 Flask==2.3.2
 openai==0.27.7
-azure-search-documents==11.4.0b3
+azure-search-documents==11.4.0b6
 azure-storage-blob==12.14.1
 python-dotenv==1.0.0
 azure-cosmos==4.3.1
+langchain==0.0.267
